[tool.poetry]
name = "bodhi-messages"
version = "7.2.1"
description = "JSON schema for messages sent by Bodhi"
readme = "README.rst"
authors = ["Fedora Infrastructure Team"]
maintainers = ["Fedora Infrastructure Team <infrastructure@lists.fedoraproject.org>"]
repository = "https://github.com/fedora-infra/bodhi"
homepage = "https://bodhi.fedoraproject.org"
keywords = ["fedora", "fedora-messaging"]
license = "GPL-2.0-or-later"
# Possible options are at https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Software Distribution"
]

packages = [
    { include = "bodhi" },
    { include = "tests", format = "sdist" }
]
include = [
    { path = "*.txt", format = "sdist" },
    { path = "COPYING", format = "sdist" }
]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.8, <4"
fedora-messaging = ">=3.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.0.0"
pytest-cov = ">=2.11.1"
diff-cover = ">=4.2.1"

[tool.poetry.plugins."fedora.messages"]
"bodhi.buildroot_override.tag.v1" = "bodhi.messages.schemas.buildroot_override:BuildrootOverrideTagV1"
"bodhi.buildroot_override.untag.v1" = "bodhi.messages.schemas.buildroot_override:BuildrootOverrideUntagV1"
"bodhi.errata.publish.v1" = "bodhi.messages.schemas.errata:ErrataPublishV1"
"bodhi.compose.complete.v1" = "bodhi.messages.schemas.compose:ComposeCompleteV1"
"bodhi.compose.composing.v1" = "bodhi.messages.schemas.compose:ComposeComposingV1"
"bodhi.compose.start.v1" = "bodhi.messages.schemas.compose:ComposeStartV1"
"bodhi.compose.sync.done.v1" = "bodhi.messages.schemas.compose:ComposeSyncDoneV1"
"bodhi.compose.sync.wait.v1" = "bodhi.messages.schemas.compose:ComposeSyncWaitV1"
"bodhi.repo.done.v1" = "bodhi.messages.schemas.compose:RepoDoneV1"
"bodhi.update.comment.v1" = "bodhi.messages.schemas.update:UpdateCommentV1"
"bodhi.update.complete.stable.v1" = "bodhi.messages.schemas.update:UpdateCompleteStableV1"
"bodhi.update.complete.testing.v1" = "bodhi.messages.schemas.update:UpdateCompleteTestingV1"
"bodhi.update.status.testing.v1" = "bodhi.messages.schemas.update:UpdateReadyForTestingV1"
"bodhi.update.status.testing.v2" = "bodhi.messages.schemas.update:UpdateReadyForTestingV2"
"bodhi.update.edit.v1" = "bodhi.messages.schemas.update:UpdateEditV1"
"bodhi.update.edit.v2" = "bodhi.messages.schemas.update:UpdateEditV2"
"bodhi.update.eject.v1" = "bodhi.messages.schemas.update:UpdateEjectV1"
"bodhi.update.karma.threshold.v1" = "bodhi.messages.schemas.update:UpdateKarmaThresholdV1"
"bodhi.update.request.revoke.v1" = "bodhi.messages.schemas.update:UpdateRequestRevokeV1"
"bodhi.update.request.stable.v1" = "bodhi.messages.schemas.update:UpdateRequestStableV1"
"bodhi.update.request.testing.v1" = "bodhi.messages.schemas.update:UpdateRequestTestingV1"
"bodhi.update.request.unpush.v1" = "bodhi.messages.schemas.update:UpdateRequestUnpushV1"
"bodhi.update.request.obsolete.v1" = "bodhi.messages.schemas.update:UpdateRequestObsoleteV1"
"bodhi.update.requirements_met.stable.v1" = "bodhi.messages.schemas.update:UpdateRequirementsMetStableV1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
