[metadata]
name = bodhi-server
version = attr:bodhi.server.__version__
description = Bodhi server
#long_description = file: README.rst
maintainer = Fedora Infrastructure Team
maintainer_email = infrastructure@lists.fedoraproject.org
platforms = Fedora, GNU/Linux
url = https://github.com/fedora-infra/bodhi
keywords = web, fedora, pyramid
license = GPLv2+
# Possible options are at https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: System :: Software Distribution
    Framework :: Pyramid
    Programming Language :: JavaScript
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
paster_plugins = pyramid
message_extractors =
    . = []

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    alembic
    arrow
    authlib
    backoff
    bleach
    celery>=4.2
    click
    colander
    cornice>=3.1.0
    dogpile.cache
    pyasn1-modules  # Due to an unfortunate dash in its name, installs break if pyasn1 is installed first
    fedora_messaging
    feedgen>=0.7.0
    jinja2
    markdown
    munch
    koji
    packaging
    prometheus_client
    psycopg2
    py3dns  # Should be required by pyLibravatar https://bugs.launchpad.net/pylibravatar/+bug/1661218
    pylibravatar
    pyramid>=1.7
    pyramid_fas_openid
    pyramid_mako
    python-bugzilla
    PyYAML
    requests
    responses
    simplemediawiki==1.2.0b2
    sqlalchemy
    waitress
    whitenoise

[options.packages.find]
exclude =
    tests*
    docs*

[options.exclude_package_data]
apache =
    *

[options.entry_points]
paste.app_factory =
    main = bodhi.server:main
console_scripts =
    initialize_bodhi_db = bodhi.server.scripts.initializedb:main
    bodhi-push = bodhi.server.push:push
    bodhi-untag-branched = bodhi.server.scripts.untag_branched:main
    bodhi-skopeo-lite = bodhi.server.scripts.skopeo_lite:main
    bodhi-sar = bodhi.server.scripts.sar:get_user_data
    bodhi-shell = bodhi.server.scripts.bshell:get_bodhi_shell
    bodhi-clean-old-composes = bodhi.server.scripts.compat:clean_old_composes
    bodhi-expire-overrides = bodhi.server.scripts.compat:expire_overrides
    bodhi-approve-testing = bodhi.server.scripts.compat:approve_testing
    bodhi-check-policies = bodhi.server.scripts.compat:check_policies


[init_catalog]
domain = bodhi
input_file = bodhi/server/locale/bodhi.pot
output_dir = bodhi/server/locale

[compile_catalog]
directory = bodhi/server/locale
domain = bodhi
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = bodhi/server/locale/bodhi.pot
width = 80

[update_catalog]
domain = bodhi
input_file = bodhi/server/locale/bodhi.pot
output_dir = bodhi/server/locale
previous = true
